# genai-playground

./: README.md  llm.py  main.py  pyproject.toml  test.py
chains/: app.py  chains.py  conditional_chain.py  parallel_chain.py
document_loaders/: AI_Introduction.txt  pdf.py  text.py
models/: gemini_chat.py  gemini_embeddings.py  groq_chat.py  huggingface.py
output_parsers/: parsers.py
outputs/: output.py  service.py
prompts/: app.py  prompt.py
structured_output/: app.py  structured.py
