[project]
name = "lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.7",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
